<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.whassa.tshirt.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_a_android_t_shirt"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/choose_your_t_shirt"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/Sexe">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:id="@+id/Man"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"
                android:id="@+id/Woman"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/choose_your_color"
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <RadioGroup android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/Couleur">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"
                android:id="@+id/White"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:id="@+id/Red"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:id="@+id/Blue"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:id="@+id/Yellow"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/choose_your_size"
            android:id="@+id/textView4"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup android:layout_column="0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/Size">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small"
                android:id="@+id/Small"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:id="@+id/Medium"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large"
                android:id="@+id/Large"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xlarge"
                android:id="@+id/XLarge"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/you_can_add_on_the_front"
            android:id="@+id/textView5"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/an_android_text"
            android:id="@+id/checkboxImage" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/an_android_logo"
            android:id="@+id/logo" />

        <include layout="@layout/layout_images_tshirt"
            android:layout_height="114dp"
            android:layout_width="fill_parent" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewfront"
            android:id="@+id/switchBack"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="61dp"
            android:layout_marginEnd="61dp"
            android:checked="false"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/Save"
                android:drawableRight="@drawable/icone_sauvegarder"
                android:textSize="9dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore"
                android:id="@+id/Restore"
                android:drawableRight="@drawable/icone_restaurer"
                android:textSize="9dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/Cancel"
                android:drawableRight="@drawable/icone_annuler"
                android:textSize="9dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
